; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_rmdec.c_get_num.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_rmdec.c_get_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @get_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_num(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @avio_rb16(i32* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %10, align 4
  %12 = sub nsw i32 %11, 2
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* %6, align 4
  %14 = and i32 %13, 32767
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp sge i32 %15, 16384
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = sub nsw i32 %18, 16384
  store i32 %19, i32* %3, align 4
  br label %30

20:                                               ; preds = %2
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @avio_rb16(i32* %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* %23, align 4
  %25 = sub nsw i32 %24, 2
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* %6, align 4
  %27 = shl i32 %26, 16
  %28 = load i32, i32* %7, align 4
  %29 = or i32 %27, %28
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %20, %17
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @avio_rb16(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
